fixing layout distortion

--- a/app/_components/AppNav/AppNav.module.css
+++ b/app/_components/AppNav/AppNav.module.css
@@ -12,7 +12,7 @@
     /* align-items: center; */
     gap: 10px;
     padding: 20px clamp(20px, 10%, 20px);
-    position: sticky;
+    position: fixed;
     width: 100%;
     z-index: 10000;
     top: 0;
